# kwin-effects-appear3

./: CMakeLists.txt  README.md  kwin-effects-appear3.spec
src/: Appear3Effect.cc  Appear3Effect.h  CMakeLists.txt  appear3.desktop  appear3.kcfg  appear3config.kcfgc  plugin.cc
